--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,8 +1,6 @@
-.md-sidebar--secondary {
-  display: none;
+.md-grid {
+  max-width: 80rem;
 }
-@media only screen and (min-width: 60em) {
-  .md-content {
-    margin-right: 0;
-  }
+.md-sidebar--secondary {
+  margin-left: 80rem;
 }
